--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <link rel="icon" type="image/x-icon" href="#" />
     <title>Document</title>
     <link href="./css/reset.css" rel="stylesheet" />
+    <link href="./css/bootstrap.css" rel="stylesheet" />
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body>
+    <button class="btn btn-primary">Add</button>
+    <script src="./js/bootstrap.bundle.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
