feat: change bootstrap colors

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="AcePeQ" />
     <meta
       name="description"
-      content="It's a offical page of ... Shop. We create and repair your bags"
+      content="It's a offical page of Dogs' Garden. We are here to help dogs and to rebuild their lives and provide them the best place to stay"
     />
     <link rel="icon" type="image/x-icon" href="#" />
     <title>Document</title>
@@ -15,7 +15,35 @@
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <button class="btn btn-primary">Add</button>
+    <header
+      class="container-fluid d-flex justify-content-center position-fixed top-0 left-0 py-3"
+    >
+      <nav>
+        <ul class="nav nav-underline gap-3">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="section_hero px-2 pb-4 mb-4 text-center border-bottom">
+        <h1 class="display-1 fw-bold text-body-emphasis mb-4 mt-5">
+          Dogs' Garden
+        </h1>
+        <p class="lead col-lg-6 mx-auto mb-5">
+          The path to happiness for our four-legged canine friends is very
+          simple. Unfortunately, these dogs have been deprived of that
+          opportunity. Would you like to help us rebuild their lives and provide
+          them with everlasting happiness?
+        </p>
+        <a href="#">Contact Us</a>
+      </section>
+    </main>
+    <footer></footer>
     <script src="./js/bootstrap.bundle.js"></script>
     <script src="./js/script.js"></script>
   </body>
