--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
       content="It's a offical page of Dogs' Garden. We are here to help dogs and to rebuild their lives and provide them the best place to stay"
     />
     <link rel="icon" type="image/x-icon" href="#" />
-    <title>Document</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Dogs' Garden</title>
     <link href="./css/reset.css" rel="stylesheet" />
     <link href="./css/bootstrap.css" rel="stylesheet" />
     <link href="./css/styles.css" rel="stylesheet" />
@@ -19,13 +27,15 @@
       class="container-fluid d-flex justify-content-center position-fixed top-0 left-0 py-3"
     >
       <nav>
-        <ul class="nav nav-underline gap-3">
+        <ul class="nav nav-underline gap-5 fs-5 fw-semibold">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
-          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">About us</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Dogs</a>
+          </li>
+          <li class="nav-item"><a class="nav-link" href="#">Adoption</a></li>
         </ul>
       </nav>
     </header>
@@ -34,13 +44,13 @@
         <h1 class="display-1 fw-bold text-body-emphasis mb-4 mt-5">
           Dogs' Garden
         </h1>
-        <p class="lead col-lg-6 mx-auto mb-5">
+        <p class="lead fw-medium col-lg-6 mx-auto mb-4">
           The path to happiness for our four-legged canine friends is very
           simple. Unfortunately, these dogs have been deprived of that
           opportunity. Would you like to help us rebuild their lives and provide
           them with everlasting happiness?
         </p>
-        <a href="#">Contact Us</a>
+        <a class="btn btn-primary btn-lg" href="#">Provide happiness</a>
       </section>
     </main>
     <footer></footer>
