feat: add section jumpbotron

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header
       class="container-fluid d-flex justify-content-center position-fixed top-0 left-0 py-3"
     >
-      <nav>
+      <nav aria-label="main navigation">
         <ul class="nav nav-underline gap-5 fs-5 fw-semibold">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -40,7 +40,7 @@
       </nav>
     </header>
     <main>
-      <section class="section_hero px-2 pb-4 mb-4 text-center border-bottom">
+      <section class="section_hero px-2 pb-4 text-center border-bottom">
         <h1 class="display-1 fw-bold text-body-emphasis mb-4 mt-5">
           Dogs' Garden
         </h1>
@@ -50,7 +50,24 @@
           opportunity. Would you like to help us rebuild their lives and provide
           them with everlasting happiness?
         </p>
-        <a class="btn btn-primary btn-lg" href="#">Provide happiness</a>
+        <a role="button" class="btn btn-primary btn-lg" href="#"
+          >Provide happiness</a
+        >
+      </section>
+
+      <section class="container my-5">
+        <div class="p-5 bg-black rounded-3">
+          <div class="container-fluid pt-4">
+            <h2 class="display-5 fw-bold text-light">Why</h2>
+            <p class="col-md-8 fs-4 text-light">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ea
+              eaque quos esse deserunt quo, doloribus eius quis dolor magni
+              commodi ducimus dolorum cupiditate voluptas quasi saepe maiores.
+              Asperiores, sapiente.
+            </p>
+            <a class="btn btn-secondary">Find your happiness</a>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
