--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
   </head>
   <body>
     <header
-      class="container-fluid d-flex justify-content-center position-fixed top-0 left-0 py-3"
+      class="header-nav container-fluid d-flex justify-content-center position-fixed top-0 left-0 py-3 bg-light border-bottom border-2 shadow-sm"
+      style="--bs-bg-opacity: 0.5"
     >
       <nav aria-label="main navigation">
         <ul class="nav nav-underline gap-5 fs-5 fw-semibold">
@@ -40,7 +41,7 @@
       </nav>
     </header>
     <main>
-      <section class="section_hero px-2 pb-4 text-center border-bottom">
+      <section class="section_hero px-2 pb-4 text-center">
         <h1 class="display-1 fw-bold text-body-emphasis mb-4 mt-5">
           Dogs' Garden
         </h1>
@@ -55,17 +56,149 @@
         >
       </section>
 
-      <section class="container my-5">
-        <div class="p-5 bg-black rounded-3">
-          <div class="container-fluid pt-4">
-            <h2 class="display-5 fw-bold text-light">Why</h2>
-            <p class="col-md-8 fs-4 text-light">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ea
-              eaque quos esse deserunt quo, doloribus eius quis dolor magni
-              commodi ducimus dolorum cupiditate voluptas quasi saepe maiores.
-              Asperiores, sapiente.
+      <section class="container custom-section-spacing">
+        <div class="jumpbadge-background p-5 bg-black rounded-3">
+          <div class="jumpbadge-content">
+            <h2 class="display-5 fw-bold text-light mb-3">
+              Why do we do this?
+            </h2>
+            <p class="fs-5 text-light mb-5">
+              Our passion has been driving us for over four years to provide
+              injured and abandoned dogs with a new, safe home. We surround them
+              with love and security, but we are only their "temporary" owners.
+              Our four-legged friends are waiting for you—to find their new home
+              and embark on a new life journey.
             </p>
-            <a class="btn btn-secondary">Find your happiness</a>
+            <a role="button" class="btn btn-secondary btn-lg"
+              >Check out our friends</a
+            >
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="section-aboutus border-top border-bottom border-5 d-flex align-items-center"
+      >
+        <div
+          class="container container-aboutus bg-light p-5 rounded-3 border border-4"
+          style="--bs-bg-opacity: 0.7"
+        >
+          <div class="row gap-5">
+            <div class="col d-flex flex-column gap-2 justify-content-center">
+              <h2 class="fw-bold display-5">Who are we?</h2>
+              <p class="fw-medium lead">
+                We are a group of friends who one day decided to take care of
+                unwanted dogs. Our shared passion grew into something bigger,
+                and we decided to expand our efforts. We hope to bring new hope
+                to the creatures that have always been under our care, as they
+                too need our understanding.
+              </p>
+              <a role="button" class="btn btn-secondary btn-lg align-self-start"
+                >Learn more about us</a
+              >
+            </div>
+
+            <div class="col">
+              <div class="row row-cols-1 row-cols-sm-2 g-4 gx-5">
+                <div class="col d-flex flex-column gap-2">
+                  <div
+                    class="feature-icon-small fs-4 bg-black rounded-3 d-flex align-items-center justify-content-center text-light"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      fill="currentColor"
+                      class="bi bi-emoji-smile-fill"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16M7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5M4.285 9.567a.5.5 0 0 1 .683.183A3.5 3.5 0 0 0 8 11.5a3.5 3.5 0 0 0 3.032-1.75.5.5 0 1 1 .866.5A4.5 4.5 0 0 1 8 12.5a4.5 4.5 0 0 1-3.898-2.25.5.5 0 0 1 .183-.683M10 8c-.552 0-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5S10.552 8 10 8"
+                      />
+                    </svg>
+                  </div>
+                  <h4 class="fw-semibold mb-0 text-body-emphasis">Happiness</h4>
+                  <p class="text-body-secondary">
+                    Every dog we take care of is happy
+                  </p>
+                </div>
+
+                <div class="col d-flex flex-column gap-2">
+                  <div
+                    class="feature-icon-small fs-4 bg-black rounded-3 d-flex align-items-center justify-content-center text-light"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      fill="currentColor"
+                      class="bi bi-activity"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        fill-rule="evenodd"
+                        d="M6 2a.5.5 0 0 1 .47.33L10 12.036l1.53-4.208A.5.5 0 0 1 12 7.5h3.5a.5.5 0 0 1 0 1h-3.15l-1.88 5.17a.5.5 0 0 1-.94 0L6 3.964 4.47 8.171A.5.5 0 0 1 4 8.5H.5a.5.5 0 0 1 0-1h3.15l1.88-5.17A.5.5 0 0 1 6 2"
+                      />
+                    </svg>
+                  </div>
+                  <h4 class="fw-semibold mb-0 text-body-emphasis">Health</h4>
+                  <p class="text-body-secondary">
+                    Each dog is examined and treated to ensure its health.
+                  </p>
+                </div>
+
+                <div class="col d-flex flex-column gap-2">
+                  <div
+                    class="feature-icon-small fs-4 bg-black rounded-3 d-flex align-items-center justify-content-center text-light"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      fill="currentColor"
+                      class="bi bi-suit-heart-fill"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1"
+                      />
+                    </svg>
+                  </div>
+                  <h4 class="fw-semibold mb-0 text-body-emphasis">
+                    Train and Joy
+                  </h4>
+                  <p class="text-body-secondary">
+                    We train each dog and play with them to ensure that our dogs
+                    will be safe for every new owner.
+                  </p>
+                </div>
+
+                <div class="col d-flex flex-column gap-2">
+                  <div
+                    class="feature-icon-small fs-4 bg-black rounded-3 d-flex align-items-center justify-content-center text-light"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="24"
+                      height="24"
+                      fill="currentColor"
+                      class="bi bi-hospital-fill"
+                      viewBox="0 0 16 16"
+                    >
+                      <path
+                        d="M6 0a1 1 0 0 0-1 1v1a1 1 0 0 0-1 1v4H1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h6v-2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5V16h6a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1h-3V3a1 1 0 0 0-1-1V1a1 1 0 0 0-1-1zm2.5 5.034v1.1l.953-.55.5.867L9 7l.953.55-.5.866-.953-.55v1.1h-1v-1.1l-.953.55-.5-.866L7 7l-.953-.55.5-.866.953.55v-1.1zM2.25 9h.5a.25.25 0 0 1 .25.25v.5a.25.25 0 0 1-.25.25h-.5A.25.25 0 0 1 2 9.75v-.5A.25.25 0 0 1 2.25 9m0 2h.5a.25.25 0 0 1 .25.25v.5a.25.25 0 0 1-.25.25h-.5a.25.25 0 0 1-.25-.25v-.5a.25.25 0 0 1 .25-.25M2 13.25a.25.25 0 0 1 .25-.25h.5a.25.25 0 0 1 .25.25v.5a.25.25 0 0 1-.25.25h-.5a.25.25 0 0 1-.25-.25zM13.25 9h.5a.25.25 0 0 1 .25.25v.5a.25.25 0 0 1-.25.25h-.5a.25.25 0 0 1-.25-.25v-.5a.25.25 0 0 1 .25-.25M13 11.25a.25.25 0 0 1 .25-.25h.5a.25.25 0 0 1 .25.25v.5a.25.25 0 0 1-.25.25h-.5a.25.25 0 0 1-.25-.25zm.25 1.75h.5a.25.25 0 0 1 .25.25v.5a.25.25 0 0 1-.25.25h-.5a.25.25 0 0 1-.25-.25v-.5a.25.25 0 0 1 .25-.25"
+                      />
+                    </svg>
+                  </div>
+                  <h4 class="fw-semibold mb-0 text-body-emphasis">
+                    Examinations
+                  </h4>
+                  <p class="text-body-secondary">
+                    Our dogs are examined and dewormed.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
