feat: about-us homepage section

--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
         class="section-aboutus border-top border-bottom border-5 d-flex align-items-center"
       >
         <div
-          class="container container-aboutus bg-light p-5 rounded-3 border border-4"
+          class="container container-aboutus bg-dark p-5 rounded-3 border border-4"
           style="--bs-bg-opacity: 0.7"
         >
-          <div class="row gap-5">
+          <div class="row gap-5 text-body-secondary">
             <div class="col d-flex flex-column gap-2 justify-content-center">
-              <h2 class="fw-bold display-5">Who are we?</h2>
-              <p class="fw-medium lead">
+              <h2 class="fw-bold display-5 text-light">Who are we?</h2>
+              <p class="fw-medium lead text-light">
                 We are a group of friends who one day decided to take care of
                 unwanted dogs. Our shared passion grew into something bigger,
                 and we decided to expand our efforts. We hope to bring new hope
@@ -117,10 +117,8 @@
                       />
                     </svg>
                   </div>
-                  <h4 class="fw-semibold mb-0 text-body-emphasis">Happiness</h4>
-                  <p class="text-body-secondary">
-                    Every dog we take care of is happy
-                  </p>
+                  <h4 class="fw-semibold mb-0 text-light">Happiness</h4>
+                  <p class="text-light">Every dog we take care of is happy</p>
                 </div>
 
                 <div class="col d-flex flex-column gap-2">
@@ -141,8 +139,8 @@
                       />
                     </svg>
                   </div>
-                  <h4 class="fw-semibold mb-0 text-body-emphasis">Health</h4>
-                  <p class="text-body-secondary">
+                  <h4 class="fw-semibold mb-0 text-light">Health</h4>
+                  <p class="text-light">
                     Each dog is examined and treated to ensure its health.
                   </p>
                 </div>
@@ -164,10 +162,8 @@
                       />
                     </svg>
                   </div>
-                  <h4 class="fw-semibold mb-0 text-body-emphasis">
-                    Train and Joy
-                  </h4>
-                  <p class="text-body-secondary">
+                  <h4 class="fw-semibold mb-0 text-light">Train and Joy</h4>
+                  <p class="text-light">
                     We train each dog and play with them to ensure that our dogs
                     will be safe for every new owner.
                   </p>
@@ -190,12 +186,8 @@
                       />
                     </svg>
                   </div>
-                  <h4 class="fw-semibold mb-0 text-body-emphasis">
-                    Examinations
-                  </h4>
-                  <p class="text-body-secondary">
-                    Our dogs are examined and dewormed.
-                  </p>
+                  <h4 class="fw-semibold mb-0 text-light">Examinations</h4>
+                  <p class="text-light">Our dogs are examined and dewormed.</p>
                 </div>
               </div>
             </div>
