--- a/index.html
+++ b/index.html
@@ -195,7 +195,27 @@
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="container">
+        <footer class="py-3 my-4">
+          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item">
+              <a href="#" class="nav-link px-2 text-body">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link px-2 text-body">About us</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link px-2 text-body">Dogs</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link px-2 text-body">Adoption</a>
+            </li>
+          </ul>
+          <p class="text-center text-body">© 2024 Dogs' Garden</p>
+        </footer>
+      </div>
+    </footer>
     <script src="./js/bootstrap.bundle.js"></script>
     <script src="./js/script.js"></script>
   </body>
