--- a/index.html
+++ b/index.html
@@ -200,16 +200,20 @@
         <footer class="py-3 my-4">
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item">
-              <a href="#" class="nav-link px-2 text-body">Home</a>
+              <a href="#" class="nav-link px-2 fw-semibold text-body">Home</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link px-2 text-body">About us</a>
+              <a href="#" class="nav-link px-2 fw-semibold text-body"
+                >About us</a
+              >
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link px-2 text-body">Dogs</a>
+              <a href="#" class="nav-link px-2 fw-semibold text-body">Dogs</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link px-2 text-body">Adoption</a>
+              <a href="#" class="nav-link px-2 fw-semibold text-body"
+                >Adoption</a
+              >
             </li>
           </ul>
           <p class="text-center text-body">© 2024 Dogs' Garden</p>
