--- a/index.html
+++ b/index.html
@@ -208,7 +208,11 @@
               >
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link px-2 fw-semibold text-body">Dogs</a>
+              <a
+                href="./pages/dogs.html"
+                class="nav-link px-2 fw-semibold text-body"
+                >Dogs</a
+              >
             </li>
             <li class="nav-item">
               <a href="#" class="nav-link px-2 fw-semibold text-body"
