feat: contact form

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -88,7 +88,69 @@
               </div>
             </div>
             <div class="col">
-              <form></form>
+              <form action="#" method="POST">
+                <fieldset>
+                  <div class="row mb-3">
+                    <div class="col">
+                      <label for="first_name" class="form-label"
+                        >First name</label
+                      >
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="first_name"
+                        name="first_name"
+                      />
+                    </div>
+                    <div class="col">
+                      <label for="last_name" class="form-label"
+                        >Last name</label
+                      >
+                      <input
+                        type="type"
+                        class="form-control"
+                        id="last_name"
+                        name="last_name"
+                      />
+                    </div>
+                  </div>
+
+                  <div class="row mb-3">
+                    <div class="col">
+                      <label for="email" class="form-label">E-mail</label>
+                      <input
+                        type="email"
+                        class="form-control"
+                        id="email"
+                        name="email"
+                      />
+                    </div>
+                    <div class="col">
+                      <label for="phone_number" class="form-label"
+                        >Phone number</label
+                      >
+                      <input
+                        type="tel"
+                        class="form-control"
+                        id="phone_number"
+                        name="phone_number"
+                      />
+                    </div>
+                  </div>
+
+                  <div class="row">
+                    <div class="col">
+                      <label for="message" class="form-label">Message</label>
+                      <textarea
+                        rows="10"
+                        class="form-control"
+                        id="message"
+                        name="message"
+                      ></textarea>
+                    </div>
+                  </div>
+                </fieldset>
+              </form>
             </div>
           </div>
         </div>
