feat: contact page

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
           </li>
           <li class="nav-item"><a class="nav-link" href="#">About us</a></li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Dogs</a>
+            <a class="nav-link" href="/pages/dogs.html">Dogs</a>
           </li>
-          <li class="nav-item"><a class="nav-link" href="#">Adoption</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/contact.html">Adoption</a>
+          </li>
         </ul>
       </nav>
     </header>
