feat: create aboutus page and update navigation

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -32,7 +32,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/index.html">Home</a>
           </li>
-          <li class="nav-item"><a class="nav-link" href="#">About us</a></li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/aboutus.html">About us</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="/pages/dogs.html">Dogs</a>
           </li>
