feat: mockup for aboutus page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </nav>
     </header>
     <main>
-      <section class="section_hero px-2 pb-4 text-center">
+      <section class="section_hero px-2 pb-4 text-center padding-top-custom">
         <h1 class="display-1 fw-bold text-body-emphasis mb-4 mt-5">
           Dogs' Garden
         </h1>
