--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -33,12 +33,7 @@
             <a class="nav-link" href="/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="/pages/aboutus.html"
-              >About us</a
-            >
+            <a class="nav-link active" aria-current="page" href="#">About us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/pages/dogs.html">Dogs</a>
@@ -49,7 +44,38 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="padding-top-custom">
+        <div class="container my-5 pt-5">
+          <div class="row gap-5">
+            <div class="col">
+              <h2 class="fw-bold display-5 text-center mb-4">Our Mission</h2>
+              <p class="lead">
+                At Dogs' Garden, we create a safe and joyful space where dogs
+                can play, socialize, and thrive. Our mission is to promote
+                responsible pet care while fostering a strong community of dog
+                lovers. With well-designed areas and engaging activities, we
+                ensure every dog feels happy, active, and at home. We believe
+                that a well-exercised and socialized dog is a happy dog, and we
+                strive to provide the perfect environment for both fun and
+                relaxation. Whether it’s playtime, training, or simply enjoying
+                the outdoors, Dogs' Garden is a place where every tail wags with
+                joy.
+              </p>
+            </div>
+            <div class="col">abs</div>
+          </div>
+        </div>
+
+        <div class="container">
+          <h2>Our story</h2>
+        </div>
+
+        <div class="container">
+          <h2>Who we are</h2>
+        </div>
+      </section>
+    </main>
     <footer>
       <div class="container">
         <footer class="py-3 my-4">
