--- a/pages/contact.html
+++ b/pages/contact.html
@@ -46,7 +46,7 @@
     </header>
     <main>
       <section
-        class="section-contact border-bottom border-2 d-flex justify-content-center align-items-center"
+        class="section-contact border-bottom border-2 d-flex justify-content-center align-items-center padding-top-custom"
       >
         <div
           class="container my-5 border border-4 py-5 px-4 rounded text-light bg-dark border-secondary"
