--- a/pages/dogs.html
+++ b/pages/dogs.html
@@ -46,7 +46,7 @@
     </header>
     <main>
       <section
-        class="hero-dogs-section bg-secondary text-center border-bottom border-2"
+        class="hero-dogs-section bg-secondary text-center border-bottom border-2 padding-top-custom"
       >
         <div class="container py-5">
           <h1 class="display-1 fw-bold text-body-emphasis mb-4 mt-5">
