feat: our mission row in about us

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -63,7 +63,20 @@
                 joy.
               </p>
             </div>
-            <div class="col">abs</div>
+            <div class="col">
+              <div class="position-relative">
+                <img
+                  class="img img-custom img-custom-1"
+                  src="/assets/images/about-us-1.jpg"
+                  alt="man running with a dog"
+                />
+                <img
+                  class="img img-custom img-custom-2"
+                  src="/assets/images/about-us-2.jpg"
+                  alt="a young lady gives high five with a lablador"
+                />
+              </div>
+            </div>
           </div>
         </div>
 
