--- a/pages/contact.html
+++ b/pages/contact.html
@@ -46,10 +46,10 @@
     </header>
     <main>
       <section
-        class="section-contact border-bottom border-2 d-flex justify-content-center align-items-center padding-top-custom"
+        class="section-contact d-flex justify-content-center align-items-center padding-top-custom"
       >
         <div
-          class="container my-5 border border-4 py-5 px-4 rounded text-light bg-dark border-secondary"
+          class="container my-5 border border-4 shadow-lg py-5 px-4 rounded text-light bg-dark border-secondary"
         >
           <div class="row gap-5">
             <div class="col-4 my-auto">
