--- a/pages/dogs.html
+++ b/pages/dogs.html
@@ -46,7 +46,7 @@
     </header>
     <main>
       <section
-        class="hero-dogs-section bg-secondary text-center border-bottom border-2 padding-top-custom"
+        class="hero-dogs-section bg-secondary text-center padding-top-custom"
       >
         <div class="container py-5">
           <h1 class="display-1 fw-bold text-body-emphasis mb-4 mt-5">
@@ -63,7 +63,7 @@
         </div>
       </section>
 
-      <section class="album-section my-5 py-5 px-3 border-bottom border-2">
+      <section class="album-section my-5 py-5 px-3">
         <div class="container">
           <div class="row row-cols-3 g-4">
             <div role="album-list" aria-label="album list" class="col">
