feat: about-us page

--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -45,53 +45,189 @@
       </nav>
     </header>
     <main>
-      <section class="padding-top-custom">
-        <div class="container my-5 pt-5">
-          <div class="row gap-5">
+      <section role="main" class="padding-top-custom">
+        <section aria-label="our mission">
+          <div class="container my-5 py-5">
+            <div class="row gap-5">
+              <div class="col">
+                <h2 class="fw-bold display-5 text-center mb-4">Our Mission</h2>
+                <p class="lead">
+                  At Dogs' Garden, we create a safe and joyful space where dogs
+                  can play, socialize, and thrive. Our mission is to promote
+                  responsible pet care while fostering a strong community of dog
+                  lovers. With well-designed areas and engaging activities, we
+                  ensure every dog feels happy, active, and at home. We believe
+                  that a well-exercised and socialized dog is a happy dog, and
+                  we strive to provide the perfect environment for both fun and
+                  relaxation. Whether it’s playtime, training, or simply
+                  enjoying the outdoors, Dogs' Garden is a place where every
+                  tail wags with joy.
+                </p>
+              </div>
+              <div class="col">
+                <div class="position-relative">
+                  <img
+                    class="img img-custom img-custom-1"
+                    src="/assets/images/about-us-1.jpg"
+                    alt="man running with a dog"
+                  />
+                  <img
+                    class="img img-custom img-custom-2"
+                    src="/assets/images/about-us-2.jpg"
+                    alt="a young lady gives high five with a lablador"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <div class="container my-5 py-5">
+          <div class="row gap-5 align-items-center">
             <div class="col">
-              <h2 class="fw-bold display-5 text-center mb-4">Our Mission</h2>
-              <p class="lead">
-                At Dogs' Garden, we create a safe and joyful space where dogs
-                can play, socialize, and thrive. Our mission is to promote
-                responsible pet care while fostering a strong community of dog
-                lovers. With well-designed areas and engaging activities, we
-                ensure every dog feels happy, active, and at home. We believe
-                that a well-exercised and socialized dog is a happy dog, and we
-                strive to provide the perfect environment for both fun and
-                relaxation. Whether it’s playtime, training, or simply enjoying
-                the outdoors, Dogs' Garden is a place where every tail wags with
-                joy.
-              </p>
+              <img
+                class="img-fluid rounded"
+                src="/assets/images/about-us-3.jpg"
+                alt="dog with a human hand trying to give a lick to it"
+              />
             </div>
             <div class="col">
-              <div class="position-relative">
-                <img
-                  class="img img-custom img-custom-1"
-                  src="/assets/images/about-us-1.jpg"
-                  alt="man running with a dog"
-                />
-                <img
-                  class="img img-custom img-custom-2"
-                  src="/assets/images/about-us-2.jpg"
-                  alt="a young lady gives high five with a lablador"
-                />
-              </div>
+              <h2 class="fw-bold display-5 text-center mb-4">Our story</h2>
+              <p class="lead">
+                Dogs' Garden was born from a deep love for dogs and a passion
+                for creating a space where they could truly thrive. Inspired by
+                the joy and companionship our furry friends bring to our lives,
+                we set out to build a haven where dogs can run, play, and
+                connect with others in a safe and nurturing environment. Our
+                journey began with a simple idea: to make every dog’s day
+                special while offering their owners a trusted place to rely on.
+                Over time, Dogs' Garden has grown into a vibrant community,
+                united by a shared commitment to the happiness and well-being of
+                every pup. For us, it’s more than a place—it’s a celebration of
+                the bond we share with our four-legged friends.
+              </p>
             </div>
           </div>
         </div>
 
-        <div class="container">
-          <h2>Our story</h2>
-        </div>
+        <section class="section_whoweare" aria-labelledby="whoweare">
+          <div class="container-fluid">
+            <h2 id="whoweare" class="fw-bold display-5 text-center mb-3">
+              Who we are
+            </h2>
+            <p class="lead mb-5 text-center col-8 mx-auto">
+              We are a team of passionate dog lovers dedicated to creating a
+              safe and enriching environment for every pup. At Dogs' Garden, our
+              mission is to bring joy, connection, and care to dogs and their
+              owners, building a community where every tail wags happily.
+            </p>
 
-        <div class="container">
-          <h2>Who we are</h2>
-        </div>
+            <div class="container-fluid px-5">
+              <div class="row gap-5 px-5">
+                <div class="col">
+                  <div class="card border-0">
+                    <img
+                      src="/assets/images/workers/sara.jpg"
+                      class="card-img"
+                      alt="photo of our head trainer Sara"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title fw-bold mb-1">Sara Woods</h4>
+                      <div>
+                        <span
+                          class="badge fs-6 fw-semibold text-bg-primary mb-2"
+                          >Head Trainer</span
+                        >
+                      </div>
+                      <p class="card-text fw-medium">
+                        Our head trainer ensures every dog learns in a fun and
+                        positive way, building confidence and good behavior
+                        through expert guidance and care.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col">
+                  <div class="card border-0">
+                    <img
+                      src="/assets/images/workers/roy.jpg"
+                      class="card-img"
+                      alt="photo of our dog care specialist Roy"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title fw-bold mb-1">Roy Grey</h4>
+                      <div>
+                        <span
+                          class="badge fs-6 fw-semibold text-bg-primary mb-2"
+                          >Dog Care Specialist</span
+                        >
+                      </div>
+                      <p class="card-text fw-medium">
+                        Our dog care specialists are here to provide individual
+                        attention, keeping every dog happy, healthy, and
+                        comfortable.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col">
+                  <div class="card border-0">
+                    <img
+                      src="/assets/images/workers/maria.jpg"
+                      class="card-img"
+                      alt="photo of our community manager, Maria"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title fw-bold mb-1">Maria Nowacky</h4>
+                      <div>
+                        <span
+                          class="badge fs-6 fw-semibold text-bg-primary mb-2"
+                          >Community Manager</span
+                        >
+                      </div>
+                      <p class="card-text fw-medium">
+                        The community manager connects with our dog-loving
+                        family, ensuring all owners and pups feel welcome and
+                        supported.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col">
+                  <div class="card border-0">
+                    <img
+                      src="/assets/images/workers/henry.jpg"
+                      class="card-img"
+                      alt="photo of our play supervisor, Henry seems he's a dog"
+                    />
+                    <div class="card-body">
+                      <h4 class="card-title fw-bold mb-1">Henry</h4>
+                      <div>
+                        <span
+                          class="badge fs-6 fw-semibold text-bg-primary mb-2"
+                          >Play Supervisor</span
+                        >
+                      </div>
+                      <p class="card-text fw-medium">
+                        Our head trainer ensures every dog learns in a fun and
+                        positive way, building confidence and good behavior
+                        through expert guidance and care.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </section>
     </main>
     <footer>
-      <div class="container">
-        <footer class="py-3 my-4">
+      <div class="container my-5 pt-5">
+        <div class="pb-3 pt-5 my-4">
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item">
               <a href="#" class="nav-link px-2 fw-semibold text-body">Home</a>
@@ -111,7 +247,7 @@
             </li>
           </ul>
           <p class="text-center text-body">© 2024 Dogs' Garden</p>
-        </footer>
+        </div>
       </div>
     </footer>
     <script src="/js/bootstrap.bundle.js"></script>
