--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     </main>
     <footer>
       <div class="container">
-        <footer class="py-3 my-4">
+        <div class="py-3 my-4">
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item">
               <a href="#" class="nav-link px-2 fw-semibold text-body">Home</a>
@@ -225,7 +225,7 @@
             </li>
           </ul>
           <p class="text-center text-body">© 2024 Dogs' Garden</p>
-        </footer>
+        </div>
       </div>
     </footer>
     <script src="./js/bootstrap.bundle.js"></script>
