--- a/pages/dogs.html
+++ b/pages/dogs.html
@@ -73,7 +73,7 @@
                 class="dog-card card shadow-sm"
               >
                 <img
-                  src="/images/dogs/labrador.jpg"
+                  src="/assets/images/dogs/labrador.jpg"
                   class="card-img-top"
                   alt="dog, its name's Max, brown"
                   width="414"
@@ -98,7 +98,7 @@
                 class="dog-card card shadow-sm"
               >
                 <img
-                  src="/images/dogs/beagle.jpg"
+                  src="/assets/images/dogs/beagle.jpg"
                   class="card-img-top"
                   alt="dog, its name's Bella, white-brown-black"
                   width="414"
@@ -123,7 +123,7 @@
                 class="dog-card card shadow-sm"
               >
                 <img
-                  src="/images/dogs/rottweiler.jpg"
+                  src="/assets/images/dogs/rottweiler.jpg"
                   class="card-img-top"
                   alt="dog, its name's Rocky"
                 />
@@ -146,7 +146,7 @@
                 class="dog-card card shadow-sm"
               >
                 <img
-                  src="/images/dogs/gretr.jpg"
+                  src="/assets/images/dogs/gretr.jpg"
                   class="card-img-top"
                   alt="dog, its name's Luna, Golden Retriever"
                 />
@@ -169,7 +169,7 @@
                 class="dog-card card shadow-sm"
               >
                 <img
-                  src="/images/dogs/dalmatian.jpg"
+                  src="/assets/images/dogs/dalmatian.jpg"
                   class="card-img-top"
                   alt="dog, its name's Daisy, Dalmatian "
                 />
@@ -192,7 +192,7 @@
                 class="dog-card card shadow-sm"
               >
                 <img
-                  src="/images/dogs/puppy.jpg"
+                  src="/assets/images/dogs/puppy.jpg"
                   class="card-img-top"
                   alt="dog, its name's Charlie, Poodle"
                 />
@@ -213,7 +213,7 @@
     </main>
     <footer>
       <div class="container">
-        <footer class="py-3 my-4">
+        <div class="pb-3 pt-5 mb-4 mt-5">
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item">
               <a href="#" class="nav-link px-2 fw-semibold text-body">Home</a>
@@ -233,7 +233,7 @@
             </li>
           </ul>
           <p class="text-center text-body">© 2024 Dogs' Garden</p>
-        </footer>
+        </div>
       </div>
     </footer>
     <script src="/js/bootstrap.bundle.js"></script>
