feat: add some media styles to home page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         <h1 class="display-1 fw-bold text-body-emphasis mb-4 mt-5">
           Dogs' Garden
         </h1>
-        <p class="lead fw-medium col-lg-6 mx-auto mb-4">
+        <p
+          class="lead fw-medium col-sm-11 col-lg-9 col-xxl-6 mx-auto mb-5 mb-lg-4"
+        >
           The path to happiness for our four-legged canine friends is very
           simple. Unfortunately, these dogs have been deprived of that
           opportunity. Would you like to help us rebuild their lives and provide
@@ -60,8 +62,8 @@
         >
       </section>
 
-      <section class="container custom-section-spacing">
-        <div class="jumpbadge-background p-5 bg-black rounded-3">
+      <section class="container-lg custom-section-spacing">
+        <div class="jumpbadge-background p-4 p-md-5 bg-black rounded-3">
           <div class="jumpbadge-content">
             <h2 class="display-5 fw-bold text-light mb-3">
               Why do we do this?
@@ -84,11 +86,13 @@
         class="section-aboutus border-top border-bottom border-5 d-flex align-items-center"
       >
         <div
-          class="container container-aboutus bg-dark p-5 rounded-3 border border-4"
+          class="container-xl container-aboutus bg-dark p-4 p-md-5 rounded-3 border mx-0 mx-sm-2 mx-xl-auto border-4"
           style="--bs-bg-opacity: 0.7"
         >
           <div class="row gap-5 text-body-secondary">
-            <div class="col d-flex flex-column gap-2 justify-content-center">
+            <div
+              class="col-12 col-lg d-flex flex-column gap-2 justify-content-center"
+            >
               <h2 class="fw-bold display-5 text-light">Who are we?</h2>
               <p class="fw-medium lead text-light">
                 We are a group of friends who one day decided to take care of
@@ -102,7 +106,7 @@
               >
             </div>
 
-            <div class="col">
+            <div class="col-12 col-lg">
               <div class="row row-cols-1 row-cols-sm-2 g-4 gx-5">
                 <div class="col d-flex flex-column gap-2">
                   <div
