feat: homepage and contact page media queries

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       style="--bs-bg-opacity: 0.5"
     >
       <nav aria-label="main navigation">
-        <ul class="nav nav-underline gap-5 fs-5 fw-semibold">
+        <ul class="nav nav-underline gap-4 gap-sm-5 fs-5 fw-semibold">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
@@ -62,13 +62,15 @@
         >
       </section>
 
-      <section class="container-lg custom-section-spacing">
+      <section
+        class="section_why_we_do container-lg px-sm-2 custom-section-spacing"
+      >
         <div class="jumpbadge-background p-4 p-md-5 bg-black rounded-3">
           <div class="jumpbadge-content">
             <h2 class="display-5 fw-bold text-light mb-3">
               Why do we do this?
             </h2>
-            <p class="fs-5 text-light mb-5">
+            <p class="fs-5 text-light mb-4">
               Our passion has been driving us for over four years to provide
               injured and abandoned dogs with a new, safe home. We surround them
               with love and security, but we are only their "temporary" owners.
