--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -28,7 +28,7 @@
       style="--bs-bg-opacity: 0.5"
     >
       <nav aria-label="main navigation">
-        <ul class="nav nav-underline gap-5 fs-5 fw-semibold">
+        <ul class="nav nav-underline gap-4 gap-sm-5 fs-5 fw-semibold">
           <li class="nav-item">
             <a class="nav-link" href="/index.html">Home</a>
           </li>
