--- a/pages/contact.html
+++ b/pages/contact.html
@@ -28,7 +28,7 @@
       style="--bs-bg-opacity: 0.5"
     >
       <nav aria-label="main navigation">
-        <ul class="nav nav-underline gap-5 fs-5 fw-semibold">
+        <ul class="nav nav-underline gap-4 gap-sm-5 fs-5 fw-semibold">
           <li class="nav-item">
             <a class="nav-link" href="/index.html">Home</a>
           </li>
@@ -49,10 +49,10 @@
         class="section-contact d-flex justify-content-center align-items-center padding-top-custom"
       >
         <div
-          class="container my-5 border border-4 shadow-lg py-5 px-4 rounded text-light bg-dark border-secondary"
+          class="container-contact container-xl my-0 my-lg-5 border border-4 shadow-lg py-lg-5 px-lg-4 rounded text-light bg-dark border-secondary"
         >
-          <div class="row gap-5">
-            <div class="col-4 my-auto">
+          <div class="row gap-lg-5">
+            <div class="col-12 col-lg-5 col-xl-4 my-5 px-0 px-lg-2 my-lg-auto">
               <div role="row" aria-labelledby="contact-us">
                 <div class="border-bottom">
                   <h3
@@ -97,7 +97,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col mb-5 mg-lg-0">
               <form action="#" method="POST">
                 <fieldset>
                   <div class="row mb-3">
