feat: dogs page media queries

--- a/pages/dogs.html
+++ b/pages/dogs.html
@@ -48,11 +48,13 @@
       <section
         class="hero-dogs-section bg-secondary text-center padding-top-custom"
       >
-        <div class="container py-5">
-          <h1 class="display-1 fw-bold text-body-emphasis mb-4 mt-5">
+        <div class="container-xl py-5">
+          <h1
+            class="display-1 fw-bold text-body-emphasis mb-4 mt-4 mb-lg-4 mt-lg-5"
+          >
             Check out our best friends
           </h1>
-          <p class="lead fw-medium col-lg-9 mx-auto mb-5">
+          <p class="lead fw-medium col-11 col-lg-9 mx-auto mb-5">
             Check out who we're currently hosting in our garden full of love and
             happiness. Each dog is assigned to one of our team members, who
             teaches them, plays with them, and provides them with experiences,
@@ -64,8 +66,8 @@
       </section>
 
       <section class="album-section my-5 py-5 px-3">
-        <div class="container">
-          <div class="row row-cols-3 g-4">
+        <div class="container-fluid container-xl px-0">
+          <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div role="album-list" aria-label="album list" class="col">
               <div
                 role="album-item"
